public class AdministrateurFinancier extends Employe {
    public AdministrateurFinancier(int idEmploye, String nom, String prenom) {
        super(idEmploye, nom, prenom);
       
    }
     public
}
