public class Chambre {
    private int idChambre;
    private int numero;
    private String type;
    private boolean etatOccupation;
}