public class Direction extends Employe {
    public void consulterTableauBord() {
        // Implémentation
    }
}