import java.util.List;

public class DossierPatient {
    private int idDossier;
    private List<String> historiqueMedical;
    private List<Document> documents;

    public void ajouterConsultation(Consultation consultation) {
        // Implémentation
    }

    public void mettreAJour() {
        // Implémentation
    }
}