public class Infirmier {
    private int idInfirmier;
    private String nom;
    private String service;

    public void realiserSoin(Soins soin) {
        // Implémentation
    }
}