import java.util.Date;
import java.util.List;

public class Ordonnance {
    private int idOrdonnance;
    private Date date;
    private List<String> medicaments;
}