import java.util.Date;

public class RendezVous {
    private int idRDV;
    private Date date;
    private String heure;
    private String motif;

    public void planifier() {
        // Implémentation
    }

    public void annuler() {
        // Implémentation
    }
}