export interface Medecin {
    idmedecin: number;
    nom:string;
    prenom:string;
    specialite:string;
    telephone:string;
    email?:string;
    
}
