@startuml diagramme_de_classe
' =========================
' Définition des classes
' =========================
class Patient {
  - idPatient : int
  - nom : String
  - prenom : String
  - dateNaissance : Date
}

class DossierPatient {
  - idDossier : int
  - historiqueMedical : String
}

class RendezVous {
  - idRDV : int
  - date : Date
  - heure : String
}

class Medecin {
  - idMedecin : int
  - specialite : String
}

class Facture {
  - idFacture : int
  - montant : double
  - statut : String
}

class Employe {
  - idEmploye : int
  - nom : String
  - prenom : String
  - contrat : String
  - salaire : double
}

class AideSoignant {
  - idSoignant : int
  - service : String
}

class SecretaireMedicale {
  - idSecretaire : int
}

class Direction {
  - idDirection : int
}

class Chambre {
  - idChambre : int
  - numero : int
  - etat : String
  - type : String
}

class Ordonnance {
  - idOrdonnance : int
  - date : Date
  - medicament : String
}

class Hospitalisation {
  - idHospitalisation : int
  - dateEntree : Date
  - dateSortie : Date
}

class Infirmier {
  - idInfirmier : int
}

class RH {
  - idRH : int
}

class AdministrateurFinancier {
  - idAdminFin : int
}

' =========================
' Héritage
' =========================
Employe <|-- SecretaireMedicale
Employe <|-- Direction
Employe <|-- AideSoignant
Employe <|-- Medecin
Employe <|-- Infirmier
Employe <|-- RH
Employe <|-- AdministrateurFinancier

' =========================
' Associations
' =========================
Patient "1" -- "1" DossierPatient
Patient "1" -- "0..*" RendezVous
Medecin "1" -- "0..*" RendezVous
Patient "1" -- "0..*" Facture
Patient "1" -- "0..*" Ordonnance
Medecin "1" -- "0..*" Ordonnance
Patient "1" -- "0..1" Hospitalisation
Hospitalisation "1" -- "1" Chambre
@enduml


